Izrađeno pomoću usluge Colaboratory

--- a/Testiranje_YOLOv8_modela.ipynb
+++ b/Testiranje_YOLOv8_modela.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPz2KqvuX9QKmg2wTldEgFw",
+      "authorship_tag": "ABX9TyP606QF7V+PpkWt/GIcQ7YD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "\n",
         "## Koraci za detekciju:\n",
         "\n",
-        "**1.** Preuzeti dijeljenu mapu 'yolov8_detection' i pronaći datoteku 'best.pt' koji se nalazi u putanji direktorija: 'yolov8_detection\\runs\\detect\\train\\weights\\' (ili samo preuzeti tu datoteku);\n",
+        "**1.** Preuzeti dijeljenu mapu 'yolov8_detection' i pronaći datoteku 'best.pt' koji se nalazi u putanji direktorija: 'yolov8_detection\\runs\\detect\\train\\weights\\', ili samo preuzeti tu datoteku na GitHubu : https://github.com/ljubantomic01/YOLOv8-detection.git;\n",
         "\n",
         "**2.** Uploadati navedeni file u Google Colab okruženje, u sektor Datoteke;\n",
         "\n",
